<?xml version="1.0"?>
<package format="2">
  <name>roboticarts_leds</name>
  <version>0.0.0</version>
  <description>The roboticarts_leds package</description>

  <author email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</author>
  <maintainer email="roboticarts1@gmail.com">Robert Vasquez Zavaleta</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>serial</build_depend>
  <exec_depend>serial</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_srvs</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>std_srvs</exec_depend>
  
</package>
